overflow fix**

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: #024766;
   margin: 0;
   overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
 }
 
 h1 {
@@ -70,15 +70,14 @@ a {
   width: 25%;
   height: 8.9rem;
   position: absolute;
-  right: 0;
+  right: -25%;
+  top: 3rem;
   background-color: #012d41;
-  margin-top: 3rem;
-  margin-right: -25%;
-  transition: margin 1s;
+  transition: right 1s;
 }
 
 .open {
-  margin-right: 0rem;
+  right: 0;
 }
 
 p {
@@ -118,6 +117,7 @@ p {
   width: 100%;
   height: 3rem;
   background-color: #012d41;
+  overflow-x: hidden;
 }
 
 .log {
@@ -174,13 +174,16 @@ p {
     width: 80%;
   }
 
+  .nav {
+    overflow-x: hidden;
+  }
+
   .menu {
     width: 100%;
-    margin-right: -100%;
-    z-index: 99;
+    right: -100%;
   }
   .open {
-    margin-right: 0;
+    right: 0;
   }
 
   .p-squeeze {
